--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
-<% title "Modules Tagged with \"#{@tag}\" " %>
+<% title "Resources Tagged with \"#{@tag}\" " %>
 
 <div class="row">
   <div class="span9">
