--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -41,7 +41,7 @@
   <div class="span3">
     <%= link_to new_package_path, class: "new_module btn btn-block btn-success btn-large" do %>
       <%= icon :plus_sign, true %>
-      Add a Module
+      Add a Resource
     <% end %>
 
     <h3 class="sidebar-header">Popular Tags</h3>
