--- a/app/views/packages/_form.html.erb
+++ b/app/views/packages/_form.html.erb
@@ -34,7 +34,7 @@
   <div class="control-group">
     <%= f.label :tag_list, "Tags", class: "control-label" %>
     <div class="controls">
-      <%= f.text_field :tag_list, class: "input-xlarge", placeholder: "directive, api, maps" %>
+      <%= f.text_field :tag_list, class: "input-xlarge", placeholder: "alloy, module, widget" %>
     </div>
   </div>
   <div class="control-group">
